<resources>
    <string name="app_name">MDEffect</string>

    <string name="nav_recycler_view">Recycler View</string>
    <string name="nav_scrolling">Scrolling</string>
    <string name="nav_fullscreen">FullScreen</string>
    <string name="nav_bottom_navigation">Bottom Navigation</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_donate">Donations</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

</resources>
