<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_recycler_and_swipe_refresh"
            android:icon="@drawable/icon_paper"
            android:title="@string/nav_recycler_view" />
        <item
            android:id="@+id/nav_scrolling"
            android:icon="@drawable/icon_paper"
            android:title="@string/nav_scrolling" />
        <item
            android:id="@+id/nav_full_screen"
            android:icon="@drawable/icon_paper"
            android:title="@string/nav_fullscreen" />
        <item
            android:id="@+id/nav_bottom_navigation"
            android:icon="@drawable/icon_paper"
            android:title="@string/nav_bottom_navigation" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_paper"
            android:title="@string/nav_settings" />
    </group>

    <group android:id="@+id/group_about">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/icon_paper"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/icon_paper"
            android:title="@string/nav_donate" />
    </group>

</menu>
